--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,38 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        >
         <activity
             android:name=".Main"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".LegumeCalc"
+            android:label="@string/app_name"
+
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".ManureCalc"
+            android:label="@string/app_name"
+
+            android:screenOrientation="portrait">
+        </activity>
+
+        <!--<activity-->
+            <!--android:name=".Credits"-->
+            <!--android:label="@string/app_name"-->
+            <!--android:theme="@android:style/Theme.NoTitleBar"-->
+            <!--android:screenOrientation="portrait">-->
+        <!--</activity>-->
+
     </application>
 
 </manifest>
