--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,12 +31,12 @@
             android:screenOrientation="portrait">
         </activity>
 
-        <!--<activity-->
-            <!--android:name=".Credits"-->
-            <!--android:label="@string/app_name"-->
-            <!--android:theme="@android:style/Theme.NoTitleBar"-->
-            <!--android:screenOrientation="portrait">-->
-        <!--</activity>-->
+        <activity
+            android:name=".Credits"
+            android:label="@string/app_name"
+
+            android:screenOrientation="portrait">
+        </activity>
 
     </application>
 
