--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
+
+
         >
         <activity
             android:name=".Main"
@@ -37,6 +39,17 @@
 
             android:screenOrientation="portrait">
         </activity>
+
+
+        <activity
+            android:name=".Email"
+            android:label="@string/app_name"
+
+            android:screenOrientation="portrait">
+        </activity>
+
+
+
 
     </application>
 
